🐛 Try to prevent modal close from triggering element below on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -44,6 +44,10 @@ body {
     touch-action: pan-y; // Disable safari viewport zoom
 }
 
+.no-events {
+    pointer-events: none;
+}
+
 .no-button {
     appearance: none;
     background: none;
